fix responsiveness on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -156,7 +156,7 @@
     }
 
     main {
-        @apply mx-auto container flex flex-col sm:px-5 py-10;
+        @apply mx-auto container flex flex-col px-5 py-10;
     }
 
     h1 {
